# energy-marketplace-platform

./: .gitignore  README.md  docker-compose.yml  interview_question.md
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py  seed.py
backend/app/api/: routes_contracts.py  routes_portfolio.py
backend/app/core/: config.py  db.py
backend/app/models/: contract.py  portfolio.py
backend/app/schemas/: contract.py  portfolio.py
backend/app/services/: contract_service.py  portfolio_service.py
backend/tests/: conftest.py  test_contracts.py  test_portfolio.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/components/: ContractCard.tsx  FilterPanel.tsx  MetricsCard.tsx  PieChart.tsx  Toast.tsx
frontend/app/contracts/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/lib/: api.ts  types.ts
frontend/app/portfolio/: page.tsx
